- Minor performance improvements
git-svn-id: https://db-svn.informatik.uni-bremen.de/repos/stuff/use/trunk@2283 e95982d2-0d12-e879-a455-8ce5a0885042